--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
 <meta charset="UTF-8">
-<title>KKBL SHOP MAX</title>
+<title>KKBL</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 body {
@@ -75,18 +75,18 @@ footer {
 <body>
 
 <header>
-  <h1>KKBL SHOP MAX</h1>
-  <p>Looksmax resell • clean condition</p>
+  <h1>KKBL</h1>
+  <p>Looksmax Items  •  Maximalize your look</p>
 </header>
 
 <section class="products">
 
   <div class="product">
     <img src="https://via.placeholder.com/400">
-    <h2>Clean Hoodie – Size M</h2>
-    <p>Stan: 9/10 • Resetowany</p>
+    <h2>Chewing tool</h2>
+    <p>improve your facial contour</p>
     <p class="price">199 zł</p>
-    <button onclick="window.location.href='https://instagram.com'">
+    <button onclick="window.location.href='https://www.instagram.com/ernest_adamczykkk?igsh=MXRsNWU4MG40MHd6bg=='">
       Kup (DM)
     </button>
   </div>
