--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@ footer {
     <p class="price">25zł</p>
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
   <input type="hidden" name="cmd" value="_xclick">
-  <input type="hidden" name="business" value="TWÓJ_EMAIL_PAYPAL">
-  <input type="hidden" name="item_name" value="Clean Hoodie – Size M">
-  <input type="hidden" name="amount" value="199.00">
+  <input type="hidden" name="business" value="ernestadamczykl@gmail.com">
+  <input type="hidden" name="item_name" value="chewing tool">
+  <input type="hidden" name="amount" value="25">
   <input type="hidden" name="currency_code" value="PLN">
   <input type="hidden" name="no_note" value="1">
   <input type="hidden" name="shipping" value="0">
