--- a/index.html
+++ b/index.html
@@ -76,15 +76,16 @@ footer {
 
 <header>
   <h1>KKBL</h1>
-  <p>Looksmax Items  •  Maximalize your look</p>
+  <p>Rzeczy do looksmaxingu • Wejdz na wyzszy poziom swojego wygladu </p>
 </header>
 
 <section class="products">
 
   <div class="product">
     <img src="https://via.placeholder.com/400">
-    <h2>Chewing tool</h2>
-    <p>improve your facial contour</p>
+    <h2>przyrzad do gryzienia(dostawa w cenie)</h2>
+    <p>popraw miesnie swojej szczeki!</p>
+    
     <p class="price">25zł</p>
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
   <input type="hidden" name="cmd" value="_xclick">
