--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ footer {
     <img src="https://via.placeholder.com/400">
     <h2>przyrzad do gryzienia</h2>
     <p>popraw miesnie swojej szczeki!</p>
-    <p> (dostawa w cenie)</p>
+    <p> DARMOWA DOSTAWA!</p>
     
     <p class="price">25zł</p>
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
