--- a/index.html
+++ b/index.html
@@ -9,48 +9,84 @@ body {
   margin: 0;
   font-family: Arial, sans-serif;
   background: #111;
+  <!DOCTYPE html>
+<html lang="pl">
+<head>
+<meta charset="UTF-8">
+<title>KKBL</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: #111;
   color: #fff;
 }
+
 header {
   padding: 40px 20px;
   text-align: center;
   border-bottom: 1px solid #333;
 }
+
 header h1 {
   margin: 0;
   font-size: 32px;
   letter-spacing: 2px;
 }
+
 header p {
   color: #aaa;
 }
+
 .products {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 20px;
   padding: 20px;
 }
+
 .product {
   background: #1a1a1a;
   padding: 15px;
   border-radius: 10px;
 }
+
 .product img {
   width: 100%;
   border-radius: 8px;
 }
+
 .product h2 {
   font-size: 18px;
   margin: 10px 0 5px;
 }
+
 .product p {
   margin: 5px 0;
   color: #ccc;
 }
+
 .price {
-  font-size: 20px;
+  margin-top: 10px;
+}
+
+/* STARA CENA */
+.old-price {
+  text-decoration: line-through;
+  color: #888;
+  font-size: 16px;
+  margin-right: 8px;
+}
+
+/* NOWA CENA */
+.new-price {
+  color: #ff4d4d;
+  font-size: 22px;
   font-weight: bold;
 }
+
 button {
   width: 100%;
   padding: 12px;
@@ -60,53 +96,34 @@ button {
   border-radius: 6px;
   font-size: 16px;
   margin-top: 10px;
-}
-button:hover {
-  opacity: 0.9;
-}
-footer {
-  text-align: center;
-  padding: 20px;
-  color: #777;
-  font-size: 14px;
+  cursor: pointer;
 }
 </style>
 </head>
+
 <body>
 
 <header>
   <h1>KKBL</h1>
-  <p>Rzeczy do looksmaxingu • Wejdz na wyzszy poziom swojego wygladu </p>
+  <p>Najlepsze produkty w promocji</p>
 </header>
 
 <section class="products">
 
   <div class="product">
-    <img src="https://via.placeholder.com/400">
-    <h2>przyrzad do gryzienia</h2>
-    <p>popraw miesnie swojej szczeki!</p>
-    <p> DARMOWA DOSTAWA!</p>
-    
-    <p class="price">25zł</p>
-    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-  <input type="hidden" name="cmd" value="_xclick">
-  <input type="hidden" name="business" value="ernestadamczykl@gmail.com">
-  <input type="hidden" name="item_name" value="chewing tool">
-  <input type="hidden" name="amount" value="25">
-  <input type="hidden" name="currency_code" value="PLN">
-  <input type="hidden" name="no_note" value="1">
-  <input type="hidden" name="shipping" value="0">
+    <img src="https://via.placeholder.com/300x200" alt="Produkt">
+    <h2>Przykładowy produkt</h2>
+    <p>Opis produktu</p>
 
-  <button type="submit">
-    Kup teraz (PayPal)
-  </button>
-    </form>
+    <p class="price">
+      <span class="old-price">50 zł</span>
+      <span class="new-price">25 zł</span>
+    </p>
+
+    <button>Kup teraz</button>
   </div>
 
 </section>
-
-<footer>
-</footer>
 
 </body>
 </html>
