--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@ button {
 
 <header>
   <h1>KKBL</h1>
-  <p>Najlepsze produkty w promocji</p>
+  <p>przyrzady do looksmaxingu • Wejdz na wyzszy poziom swojego wygladu</p>
 </header>
 
 <section class="products">
 
   <div class="product">
     <img src="https://via.placeholder.com/300x200" alt="Produkt">
-    <h2>Przykładowy produkt</h2>
-    <p>Opis produktu</p>
+    <h2>przyzad do rzucia</h2>
+    <p>zbuduj miesnie swojej szczeki!</p>
 
     <p class="price">
       <span class="old-price">50 zł</span>
