--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@ button {
     <img src="https://via.placeholder.com/300x200" alt="Produkt">
     <h2>przyzad do rzucia</h2>
     <p>zbuduj miesnie swojej szczeki!</p>
+    <p> DARMOWA DOSTAWA</p>
 
     <p class="price">
       <span class="old-price">50 zł</span>
